# Teki

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  notes
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  build.sh  controller.h  definitions.h  evaluate.cpp  evaluate.h  globals.cpp  lc0nn.h  lookups.cpp  lookups.h  main.cpp  make_move.cpp  makefile  mcts.cpp  mcts.h  misc.h  move.cpp  move.h  movegen.cpp  options.cpp  options.h  position.cpp  position.h  score.h  search.cpp  test.cpp  test.h  time_manager.h  tt.h  uci.cpp  uci.h  utils.h
src/neural/: commandline.cc  encoder.cc  encoder.h  factory.cc  factory.h  filesystem.posix.cc  filesystem.win32.cc  loader.cc  loader.h  move_index.h  network_cudnn.cu  optionsdict.cc  optionsdict.h  position_history.h
src/perft/: fenlist.txt  test.sh
src/syzygy/: tbconfig.h  tbcore.c  tbcore.h  tbprobe.h
